# aoc-2025

./: CMakeLists.txt  README.md  run.sh
01/: input.txt  main.cpp
02/: main.cpp
03/: main.cpp
04/: main.cpp
05/: main.cpp
06/: main.cpp
07/: main.cpp
08/: main.cpp
include/: utils.h
